--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 85,
    "id": "956bcd15",
    "metadata": {},
    "outputs": [],
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 86,
    "id": "8879af31",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<zip at 0x126748f40>"
+       "<zip at 0x12671c840>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 87,
    "id": "5a3652ba",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 88,
    "id": "8a349147",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 89,
    "id": "f3a90c12",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 90,
    "id": "f0a366ce",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 91,
    "id": "dcfc210d",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 92,
    "id": "3a841efe",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 93,
    "id": "ad09ac43",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "5"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 94,
    "id": "7fcdb1e0",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 95,
    "id": "384197c2",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 96,
    "id": "8c6e3530",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 97,
    "id": "14e94ec9",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "<Response [401]>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,8 +242,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "f39d8abf",
+   "execution_count": 98,
+   "id": "e420894c",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "<Response [401]>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,8 +266,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "050314e6",
+   "execution_count": 99,
+   "id": "a84adee8",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "<Response [401]>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,8 +290,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "5d865de5",
+   "execution_count": 100,
+   "id": "3673994f",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "'{\"cod\":401, \"message\": \"Invalid API key. Please see http://openweathermap.org/faq#error401 for more info.\"}'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "8e24513b",
+   "execution_count": 101,
+   "id": "8f313f98",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        " 'message': 'Invalid API key. Please see http://openweathermap.org/faq#error401 for more info.'}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,8 +335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "1d34c92d",
+   "execution_count": 102,
+   "id": "b6afbfff",
    "metadata": {},
    "outputs": [
     {
@@ -359,8 +359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "5f474e82",
+   "execution_count": 103,
+   "id": "69a6b3d4",
    "metadata": {},
    "outputs": [
     {
@@ -383,8 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "d8c54085",
+   "execution_count": 104,
+   "id": "6fd1b511",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        " 'message': 'Invalid API key. Please see http://openweathermap.org/faq#error401 for more info.'}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,8 +408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "3c49ceb1",
+   "execution_count": 105,
+   "id": "f6349750",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,8 +419,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "c26391f4",
+   "execution_count": 106,
+   "id": "b74b2c9e",
    "metadata": {
     "scrolled": true
    },
@@ -449,8 +449,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "6af75cf7",
+   "execution_count": 107,
+   "id": "ed2ac6bc",
    "metadata": {},
    "outputs": [
     {
@@ -476,8 +476,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "6de5b17b",
+   "execution_count": 108,
+   "id": "ceebc0a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,8 +488,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "68d7a6fb",
+   "execution_count": 109,
+   "id": "bbbc7a14",
    "metadata": {},
    "outputs": [
     {
@@ -515,8 +515,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "c5ec6ab3",
+   "execution_count": 110,
+   "id": "13257df1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,23 +535,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "02185df0",
+   "execution_count": 111,
+   "id": "1596a9eb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing Record 6 of Set 1 | cockburn town\n",
+      "Processing Record 1 of Set 1 | cockburn town\n",
       "City not found. Skipping...\n",
-      "Processing Record 7 of Set 1 | gat\n",
+      "Processing Record 2 of Set 1 | gat\n",
       "City not found. Skipping...\n",
-      "Processing Record 8 of Set 1 | parvatsar\n",
+      "Processing Record 3 of Set 1 | parvatsar\n",
       "City not found. Skipping...\n",
-      "Processing Record 9 of Set 1 | punta arenas\n",
+      "Processing Record 4 of Set 1 | punta arenas\n",
       "City not found. Skipping...\n",
-      "Processing Record 10 of Set 1 | saint george\n",
+      "Processing Record 5 of Set 1 | saint george\n",
       "City not found. Skipping...\n",
       "-----------------------------\n",
       "Data Retrieval Complete      \n",
@@ -615,8 +615,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "492f6605",
+   "execution_count": 112,
+   "id": "4848341e",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,8 +666,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "1a6653e3",
+   "execution_count": 113,
+   "id": "920444eb",
    "metadata": {},
    "outputs": [
     {
@@ -695,8 +695,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "200a26ac",
+   "execution_count": 114,
+   "id": "06940df3",
    "metadata": {},
    "outputs": [
     {
@@ -732,17 +732,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "d9f2e9f2",
+   "execution_count": 115,
+   "id": "7d8e916f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1658901355.114763"
+       "1658928527.484382"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,8 +757,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "a6c5407a",
+   "execution_count": 116,
+   "id": "ac77e359",
    "metadata": {},
    "outputs": [
     {
@@ -798,8 +798,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "6889bd8c",
+   "execution_count": 117,
+   "id": "16f98273",
    "metadata": {},
    "outputs": [
     {
@@ -834,8 +834,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "9ee8ced5",
+   "execution_count": 118,
+   "id": "21685c68",
    "metadata": {},
    "outputs": [
     {
@@ -870,8 +870,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "b32ccdbd",
+   "execution_count": 119,
+   "id": "50b48dca",
    "metadata": {},
    "outputs": [
     {
@@ -906,8 +906,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "90e97a54",
+   "execution_count": 120,
+   "id": "f13d9b93",
    "metadata": {},
    "outputs": [
     {
@@ -927,8 +927,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "5db6f507",
+   "execution_count": 121,
+   "id": "8536fa15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,8 +959,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "85ea6a23",
+   "execution_count": 122,
+   "id": "7be73413",
    "metadata": {},
    "outputs": [
     {
@@ -993,8 +993,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "9f5cffab",
+   "execution_count": 123,
+   "id": "a13fb7fe",
    "metadata": {},
    "outputs": [
     {
@@ -1021,8 +1021,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "27428bfb",
+   "execution_count": 124,
+   "id": "25698c3d",
    "metadata": {},
    "outputs": [
     {
@@ -1049,8 +1049,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "451476b7",
+   "execution_count": 125,
+   "id": "6376b5bd",
    "metadata": {},
    "outputs": [
     {
@@ -1077,8 +1077,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "58546d08",
+   "execution_count": 126,
+   "id": "ba198fe9",
    "metadata": {},
    "outputs": [
     {
@@ -1105,8 +1105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "1ddde2f2",
+   "execution_count": 127,
+   "id": "4225499e",
    "metadata": {},
    "outputs": [
     {
@@ -1133,8 +1133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "d27b1cb4",
+   "execution_count": 128,
+   "id": "f29d3b8f",
    "metadata": {},
    "outputs": [
     {
@@ -1161,8 +1161,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "1a9990d1",
+   "execution_count": 130,
+   "id": "a0e6b236",
    "metadata": {},
    "outputs": [
     {
@@ -1190,10 +1190,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4ef4bb7",
+   "id": "bdd8ade8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Google API Key\n",
+    "g_key = \"AIzaSyCvj6Uh5hnFj5UyaEi4RT4E1SPcsuSdEiQ\""
+   ]
   }
  ],
  "metadata": {
