--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3c7f7f9b",
+   "id": "b24cf1a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f06567a0",
+   "id": "5d2d7aad",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "70c9dc30",
+   "id": "d4aa1e88",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "95256a80",
+   "id": "dd2e000c",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ab98f1f9",
+   "id": "1f1ccf24",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "90910859",
+   "id": "77187497",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "950fdc55",
+   "id": "cd9207bc",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "299aac5f",
+   "id": "d1e6dd6b",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d64613ba",
+   "id": "5eaaa1d8",
    "metadata": {},
    "outputs": [
     {
@@ -691,19 +691,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "6d479c1d",
+   "execution_count": 37,
+   "id": "4937b4df",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'params' is not defined",
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (2933303882.py, line 15)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/j5/_tqlpxd15dbfszn7p2ngd_m80000gn/T/ipykernel_4674/3718543742.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# Add the latitude and longitude to location key for the params dictionary.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"location\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"{lat},{lng}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m# Use the search term: \"lodging\" and our latitude and longitude.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'params' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/j5/_tqlpxd15dbfszn7p2ngd_m80000gn/T/ipykernel_4674/2933303882.py\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    try:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
@@ -730,8 +727,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "8e1965c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gmaps' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/j5/_tqlpxd15dbfszn7p2ngd_m80000gn/T/ipykernel_4674/4096804702.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlocations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Lat\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Lng\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmax_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Max Temp\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgmaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcenter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m31.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mzoom_level\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m heat_layer = gmaps.heatmap_layer(locations, weights=max_temp, dissipating=False,\n\u001b[1;32m      6\u001b[0m              max_intensity=300, point_radius=4)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gmaps' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Add a heatmap of temperature for the vacation spots.\n",
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
+    "max_temp = hotel_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp, dissipating=False,\n",
+    "             max_intensity=300, point_radius=4)\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "029fcd8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gmaps' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/j5/_tqlpxd15dbfszn7p2ngd_m80000gn/T/ipykernel_4674/3656008730.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlocations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Lat\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Lng\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmax_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Max Temp\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgmaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcenter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m31.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mzoom_level\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,\n\u001b[1;32m      6\u001b[0m              dissipating=False, max_intensity=300, point_radius=4)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gmaps' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Add a heatmap of temperature for the vacation spots and marker for each city.\n",
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
+    "max_temp = hotel_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,\n",
+    "             dissipating=False, max_intensity=300, point_radius=4)\n",
+    "marker_layer = gmaps.marker_layer(locations)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(marker_layer)\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5ce66725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "</dl>\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "0e829884",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store the DataFrame Row.\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ff19f74f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gmaps' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/j5/_tqlpxd15dbfszn7p2ngd_m80000gn/T/ipykernel_4674/1193934505.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlocations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Lat\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Lng\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmax_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Max Temp\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgmaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcenter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m31.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mzoom_level\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n\u001b[1;32m      6\u001b[0m              max_intensity=300, point_radius=4)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gmaps' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Add a heatmap of temperature for the vacation spots and a pop-up marker for each city.\n",
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
+    "max_temp = hotel_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n",
+    "             max_intensity=300, point_radius=4)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(marker_layer)\n",
+    "\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c3a6a191",
+   "id": "dfa4d683",
    "metadata": {},
    "outputs": [],
    "source": []
